--- a/package.json
+++ b/package.json
@@ -28,16 +28,16 @@
 		]
 	},
 	"dependencies": {
-		"@bugsnag/react-native": "^7.10.5",
+		"@bugsnag/react-native": "^7.19.0",
 		"@codler/react-native-keyboard-aware-scroll-view": "^2.0.1",
 		"@gorhom/bottom-sheet": "^4.3.1",
 		"@hookform/resolvers": "^2.9.10",
 		"@nozbe/watermelondb": "0.23.0",
 		"@react-native-async-storage/async-storage": "^1.17.11",
+		"@react-native-camera-roll/camera-roll": "^5.2.4",
 		"@react-native-clipboard/clipboard": "^1.8.5",
 		"@react-native-community/art": "^1.2.0",
 		"@react-native-community/blur": "^4.1.0",
-		"@react-native-community/cameraroll": "4.1.2",
 		"@react-native-community/datetimepicker": "3.5.2",
 		"@react-native-community/hooks": "2.6.0",
 		"@react-native-community/netinfo": "6.0.0",
@@ -94,7 +94,7 @@
 		"react-native-easy-toast": "^1.2.0",
 		"react-native-fast-image": "RocketChat/react-native-fast-image.git#bump-version",
 		"react-native-file-viewer": "^2.1.4",
-		"react-native-gesture-handler": "2.4.2",
+		"react-native-gesture-handler": "2.9.0",
 		"react-native-image-crop-picker": "RocketChat/react-native-image-crop-picker",
 		"react-native-image-progress": "^1.1.1",
 		"react-native-keycommands": "2.0.3",
@@ -125,7 +125,7 @@
 		"react-native-svg": "^12.3.0",
 		"react-native-ui-lib": "RocketChat/react-native-ui-lib",
 		"react-native-vector-icons": "9.1.0",
-		"react-native-webview": "10.3.2",
+		"react-native-webview": "11.26.1",
 		"react-redux": "^8.0.5",
 		"reactotron-react-native": "^5.0.3",
 		"redux": "4.2.0",
